@@ -358,6 +358,34 @@ Init_IO(void) {
     assert_equal "  Method Comment!   \n", read_method.comment
   end
 
+  def test_define_method_private
+    content = <<-EOF
+/*Method Comment! */
+static VALUE
+rb_io_s_read(argc, argv, io)
+    int argc;
+    VALUE *argv;
+    VALUE io;
+{
+}
+
+void
+Init_IO(void) {
+    /*
+     * a comment for class Foo on rb_define_class
+     */
+    VALUE rb_cIO = rb_define_class("IO", rb_cObject);
+    rb_define_private_method(rb_cIO, "read", rb_io_s_read, -1);
+}
+    EOF
+
+    klass = util_get_class content, 'rb_cIO'
+    read_method = klass.method_list.first
+    assert_equal 'IO#read', read_method.full_name
+    assert_equal :private, read_method.visibility
+    assert_equal "  Method Comment!   \n", read_method.comment
+  end
+
   def util_get_class(content, name)
     @parser = util_parser content
     @parser.scan
