@@ -10,6 +10,7 @@
     tiburon.
   * Fixed scanning constants for if/end, etc. pairs.  Bug #24609 by Ryan
     Davis.
+  * Fixed private methods in the C parser.  Bug #24599 by Aaron Patterson.
 
 === 2.4.1 / 2009-02-26
 
